wagtail_landing/static/css/wagtail_landing.css
/* ... */
@media (min-width: 1200px) {
  .fs-1 {
    font-size: 2.5rem !important;
  }

  .fs-2 {
    font-size: 2rem !important;
  }

  .fs-3 {
    font-size: 1.75rem !important;
  }

  .fs-4 {
    font-size: 1.5rem !important;
  }
}
@media print {
  .d-print-inline {
    display: inline !important;
  }

  .d-print-inline-block {
    display: inline-block !important;
  }

  .d-print-block {
    display: block !important;
  }

  .d-print-grid {
    display: grid !important;
  }

  .d-print-table {
    display: table !important;
  }

  .d-print-table-row {
    display: table-row !important;
  }

  .d-print-table-cell {
    display: table-cell !important;
  }

  .d-print-flex {
    display: flex !important;
  }

  .d-print-inline-flex {
    display: inline-flex !important;
  }

  .d-print-none {
    display: none !important;
  }
}
html {
  scroll-padding-top: 4.5rem;
}

body {
  position: relative;
  overflow-x: hidden;
  background-image: url("../assets/img/header-bg.jpg");
}

p {
  line-height: 1.75;
}


.confirm {
  display: none;
  background-color: #F3F5F6;
  color: #000000;
  border: 1px solid #aaa;
  position: fixed;
  width: 270px;
  height: 100px;
  left: 40%;
  top:40%;
  margin-left: -100px;
  padding: 10px 20px 10px;
  box-sizing: border-box;
  text-align: center;
}

  .confirm button {
      background-color: #FFFFFF;
      display: inline-block;
      border-radius: 12px;
      border: 4px solid #aaa;
      padding: 5px;
      text-align: center;
      width: 60px;
      cursor: pointer;
  }

  .confirm .message {
      text-align: center;
  }

nav a {
  font-family: sans-serif;
  text-decoration: none;
  color: gray;
  position: relative;
  margin: 10px 0;
  display: inline-block;
  padding: 12px 10px;
}

nav a::after {
  content: "";
  background: black;
  height: 3px;
  position: absolute;
  bottom: 0;
  transition: .16s all 0.025s;
}

.red-btn::after {
    content: "";
    background: red;
    height: 3px;
    position: absolute;
    bottom: 0;
    transition: .16s all 0.025s;
  }

  .darkblue-btn::after {
    content: "";
    background: darkblue;
    height: 3px;
    position: absolute;
    bottom: 0;
    transition: .16s all 0.025s;
  }

  .blue-btn::after {
    content: "";
    background: blue;
    height: 3px;
    position: absolute;
    bottom: 0;
    transition: .16s all 0.025s;
  }

  .green-btn::after {
    content: "";
    background: green;
    height: 3px;
    position: absolute;
    bottom: 0;
    transition: .16s all 0.025s;
  }

nav a::after {
  left: 100%;
  right: 0;
}

nav a:hover ~ a::after {
  left: 0;
  right: 100%;
}

nav a:hover::after {
  left: 0;
  right: 0;
}

.sub-bg {
  position: relative;
  background-image: url('../images/Background-Pattern~1.png');

  /* height: 150vh;  */

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}



.card-body {
  background-color: yellow;
  justify-content: center;
}

.btn-social {
  height: 2.5rem;
  width: 2.5rem;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  border-radius: 100%;
}

.main-header{
  background-color: transparent;
}

.home-bg {
  padding-top: 10.5rem;
  padding-bottom: 15rem;
  text-align: center;
  color: #fff;
  background-image: url("../images/header-bg.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}


.img-brand {
  height: 2.75rem;
}


.column {
  width:300px;
  float:left
}

.footer-bg {

	background: url('../images/footer/Footer\ Oattern.png') center center;
	background-size: cover;
	background-color: #ddd;
  width: 100%;
  text-align: center;
  font-size: 0.9rem;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.footer-img {
  background: url('../images/footer/Footer\ Logo-01~1.png') center center;
  background-size: cover;
  height: 70px;
}

.line-orange {
  height: 10px;
  background-color: #f5bb80;
  width: 100%;
}

.line {
  height: 2px;
  background-color: black;
  width: 100%;
}

@media only screen and (max-width: 600px) {
  .landing-logo {
    width: 100%;
  }

  .nav-list-collapse{
    position: absolute;
    margin-left: 20px;
    background-color: #f7bd00;
    padding: 20px;
    width: 90%;
  }

  .landing-page-toggle-button{
    display: block !important;
    text-align: center;
    width: 42px;
    margin-left: -8.5vw;
  }

}

/* text-align: center;
    width: 42px;
    margin-left: -8.5vw; */



@media only screen and (min-width: 600px) {
  
  .nav-list-collapse{
    display: block !important;
  }

  .landing-logo {
    width: 25vw;
  }

}





.landing-page-background{
     /* The image used */
  background-image: url("../images/header-bg.jpg");

  /* Full height */
  height: 99vh; 

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.content-page-background{
  /* The image used */
background-image: url("../images/Background-Pattern-Header~1.png");

/* Full height */
height: 99vh; 

/* Center and scale the image nicely */
z-index: 2;
background-position: center;
background-repeat: no-repeat;
background-size: cover;
}


.card-grid-one{
  background-image: url("../images/content/Money\ freedom-01~1.jpg");
}




.home-page-container {
    height: 50vh;
}

.content-page-container {
  height: 200vh;
}

.home-page-button {
    border-radius: 0px;
    box-shadow: -3px 3px #eb7700;
    background-color: #f7bd00;
    color: #000;
    margin: auto;
    align-content: center;
    width: 110px;
    height: 55px;
    font-weight: 700;
}

.content-b-one {
  border: none;
  border-radius: 0px;
  background-color: #ffffff;
  margin: auto;
}

.content-b-two {
  border: none;
  border-radius: 0px;
  background-color: #b3b300;
  margin: auto;
}
/* ... */

